RESOLVED FIXED75313
[V8][Chromium] 'randomString' in document.body.style always returns true
https://bugs.webkit.org/show_bug.cgi?id=75313
Summary [V8][Chromium] 'randomString' in document.body.style always returns true
Alexander Pavlov (apavlov)
Reported 2011-12-28 06:57:29 PST
V8CSSStyleDeclaration::namedPropertyQuery() always returns v8::Integer::New(v8::None) Regression from http://trac.webkit.org/changeset/102578
Attachments
Patch (5.64 KB, patch)
2011-12-28 07:10 PST, Alexander Pavlov (apavlov)
no flags
[PATCH] Allow both 'webkit...' and 'Webkit...' prefixes for compatibility (6.33 KB, patch)
2011-12-28 08:23 PST, Alexander Pavlov (apavlov)
no flags
[PATCH] Fixed CSS property detection (4.23 KB, patch)
2011-12-28 10:00 PST, Alexander Pavlov (apavlov)
abarth: review+
Alexander Pavlov (apavlov)
Comment 1 2011-12-28 06:58:00 PST
Patch to follow.
Alexander Pavlov (apavlov)
Comment 2 2011-12-28 07:10:47 PST
Alexander Pavlov (apavlov)
Comment 3 2011-12-28 07:27:36 PST
Alexander Pavlov (apavlov)
Comment 4 2011-12-28 08:23:12 PST
Created attachment 120672 [details] [PATCH] Allow both 'webkit...' and 'Webkit...' prefixes for compatibility
Alexander Pavlov (apavlov)
Comment 5 2011-12-28 08:33:27 PST
Anton, can you have a look at the change please?
WebKit Review Bot
Comment 6 2011-12-28 09:14:29 PST
Comment on attachment 120672 [details] [PATCH] Allow both 'webkit...' and 'Webkit...' prefixes for compatibility Attachment 120672 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/11036597 New failing tests: fast/dynamic/005.html
Alexander Pavlov (apavlov)
Comment 7 2011-12-28 10:00:37 PST
Created attachment 120684 [details] [PATCH] Fixed CSS property detection
Adam Barth
Comment 8 2011-12-28 10:04:55 PST
Comment on attachment 120684 [details] [PATCH] Fixed CSS property detection View in context: https://bugs.webkit.org/attachment.cgi?id=120684&action=review > Source/WebCore/bindings/v8/custom/V8CSSStyleDeclarationCustom.cpp:185 > + CSSPropertyInfo* propertyInfo = cssPropertyInfo(v8Name); > + if (propertyInfo) We could combine these lines.
Alexander Pavlov (apavlov)
Comment 9 2011-12-28 10:05:56 PST
(In reply to comment #8) > (From update of attachment 120684 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=120684&action=review > > > Source/WebCore/bindings/v8/custom/V8CSSStyleDeclarationCustom.cpp:185 > > + CSSPropertyInfo* propertyInfo = cssPropertyInfo(v8Name); > > + if (propertyInfo) > > We could combine these lines. Thanks Adam, will fix before landing!
Alexander Pavlov (apavlov)
Comment 10 2011-12-28 10:08:58 PST
anton muhin
Comment 11 2011-12-28 10:57:19 PST
Comment on attachment 120684 [details] [PATCH] Fixed CSS property detection View in context: https://bugs.webkit.org/attachment.cgi?id=120684&action=review > Source/WebCore/bindings/v8/custom/V8CSSStyleDeclarationCustom.cpp:186 > + return v8::Integer::New(v8::None); just a question: is v8::None the best option? That's most probably is, but just double checking if those properties are enumerable and deletable?
Alexander Pavlov (apavlov)
Comment 12 2011-12-28 12:22:57 PST
Comment on attachment 120684 [details] [PATCH] Fixed CSS property detection View in context: https://bugs.webkit.org/attachment.cgi?id=120684&action=review >> Source/WebCore/bindings/v8/custom/V8CSSStyleDeclarationCustom.cpp:186 >> + return v8::Integer::New(v8::None); > > just a question: is v8::None the best option? That's most probably is, but just double checking if those properties are enumerable and deletable? That seems to be what we used to return earlier, before the fix.
Note You need to log in before you can comment on or make changes to this bug.