[V8][Chromium] 'randomString' in document.body.style always returns true https://bugs.webkit.org/show_bug.cgi?id=75313

Reviewed by Adam Barth.

Source/WebCore:

* bindings/v8/custom/V8CSSStyleDeclarationCustom.cpp:
(WebCore::V8CSSStyleDeclaration::namedPropertyQuery):

LayoutTests:

* fast/css/style-enumerate-properties-expected.txt:
* fast/css/style-enumerate-properties.html:

Canonical link: https://commits.webkit.org/92070@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103769 268f45cc-cd09-0410-ab3c-d52691b4dbfc